[project]
name = "rag-mcp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.6.1",
    "langchain-community>=0.3.24",
    "mcp-agent>=0.1.0",
    "sentence-transformers>=4.1.0",
]
